--- a/public/index.html
+++ b/public/index.html
@@ -5,39 +5,28 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <title>Ryan Pearson &#x1f60e; | Web Developer</title>
+    <meta
+      name="title"
+      property="og:title"
+      content="Ryan Pearson | Web Developer"
+    />
+    <meta name="author" content="Ryan Pearson" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      property="og:description"
+      content="Ryan Pearson is a web developer in San Diego. View Ryan's portfolio of projects and learn more about Ryan's history and skills."
     />
+    <meta property="og:image" content="./images/projects/frontPage.png" />
+    <meta property="og:url" content="http://ryanpearson.website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:site_name" content="Ryan Pearson's Portfolio" />
+    <meta name="twitter:image:alt" content="Ryan Pearson | Web Developer" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this React site.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
