added mobile menu NavLink funcitons to handle clicks

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this React site.</noscript>
-    <div id="root"></div>
+    <div id="ryans-portfolio"></div>
   </body>
 </html>
