set delay for menu fade-in and intro slider appear

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this React site.</noscript>
-    <div id="ryans-portfolio"></div>
+    <div id="ryans-portfolio" class="vh100"></div>
   </body>
 </html>
