window browser buttons are svgs

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this React site.</noscript>
+    <noscript>This site was built with React and requires JavaScript</noscript>
     <div id="ryans-portfolio" class="vh100"></div>
   </body>
 </html>
