changed class components to functionalcomponents

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,20 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap"
       rel="stylesheet"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-155324589-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-155324589-1');
+    </script>
   </head>
   <body>
     <noscript>This site was built with React and requires JavaScript</noscript>
